--- a/refresh.yml
+++ b/refresh.yml
@@ -9,12 +9,12 @@ ignored_folders:
 - templates
 included_extensions:
 - .go
-build_target_path: "./cmd"
+build_target_path: "."
 build_path: /tmp
 build_flags: []
 build_delay: 200ns
 binary_name: refresh-build
-command_flags: []
+command_flags: ["serve"]
 command_env: []
 enable_colors: true
 log_name: ""
