--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "vue": "^2.6.10",
-    "vuetify": "^1.5.16"
+    "vue-router": "^3.0.7",
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
