--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "axios": "^0.19.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vuetify": "^1.5.16",
+    "vuetify": "^1.5.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "deepmerge": "^4.0.0",
+    "fibers": "^4.0.1",
     "laravel-mix": "^4.1.2",
+    "sass": "^1.22.9",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "scripts": {
