--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 credentials.json
 gmail_backup
 /.vscode
+gmail_backup.db
 
 # Test binary, build with `go test -c`
 *.test
@@ -15,3 +16,5 @@ gmail_backup
 *.out
 
 /node_modules
+
+/data
